fixed wrong font-size for cell

--- a/server/public/main.css
+++ b/server/public/main.css
@@ -23,7 +23,7 @@ body {
 }
 
 .cell {
-  font-size: 5vw;
+  font-size: 5vh;
   text-align: center;
   width: 50px;
   height: 50px;
